Fix contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ header span {
 
 /* Navigation */
 nav {
-  background-color: #cfb254;
+  background-color: #a89144;
   display: flex;
   justify-content: center;
 }
